--- a/src/app/dialog/dialog.component.css
+++ b/src/app/dialog/dialog.component.css
@@ -15,8 +15,8 @@
 .dialog {
   box-shadow: 0 2px 5px rgb(0 0 0 / 25%), 0 2px 9px rgb(0 0 0 / 22%);
   background-color: white;
-  min-width: 50%;
-  min-height: 50%;
+  /* min-width: 50%;
+  min-height: 50%; */
   /* display: flex;
   justify-content: center;
   flex-direction: column; */
@@ -39,6 +39,11 @@ span.close-btn {
 .top-space {
   position: relative;
   width: 100%;
-  height: 50px;
+  height: 30px;
   margin-bottom: 10px;
+}
+
+.scroll {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
